# nim-llm-game

./: .gitignore  LICENSE  README.md  app.py  game.py  nim_games.db  prototype.ipynb  pyproject.toml  requirements.txt
arena/: display.py  game.py  llm.py  matchstick_view.py  nim_game.py  player.py  record.py
static/: app.js  style.css
templates/: index.html
